did some redux stuff

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Emmanuel Henri",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "0.0.7",
     "express": "^4.16.2",
     "next": "^5.0.0",
     "react": "^16.2.0",
